[tool.poetry]
name = "advent2022"
version = "0.1.0"
description = ""
authors = ["Derek Rodriguez <derek.rodriguez@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
